--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 					<a href="/">Recipe Haven</a>
 				</div>
 				<ul class="nav-links">
-					<li><a href="#home">Home</a></li>
-					<li><a href="#recipe">Recipes</a></li>
-					<li><a href="#popular">Popular</a></li>
-					<li><a href="#about">About</a></li>
+					<li><a href="home">Home</a></li>
+					<li><a href="recipe">Recipes</a></li>
+					<li><a href="popular">Popular</a></li>
+					<li><a href="about">About</a></li>
 				</ul>
 			</div>
 			<div class="right-header">
@@ -57,7 +57,7 @@
 		<div style="height: 75px;"></div>
 	</header>
 
-	<section id="#home" class="home page">
+	<section id="home" class="home page">
 		<section class="description">
 			<div class="background">
 				<img src="/Images/description-background.jpg" alt="Loading Images">
@@ -141,7 +141,7 @@
 		</section>
 	</section>
 
-	<section id="#recipe" class="recipe page">
+	<section id="recipe" class="recipe page">
 		<section class="recipe-cards-section">
 			<h2>Featured Recipes</h2>
 
@@ -150,11 +150,11 @@
 
 	</section>
 
-	<section id="#popular" class="popular page">
+	<section id="popular" class="popular page">
 		<div class="recipe-teasers"></div>
 	</section>
 
-	<section id="#about" class="about page">
+	<section id="about" class="about page">
 		<section class="about-section">
 			<div class="about-container">
 				<h2>About Us</h2>
@@ -206,10 +206,10 @@
 			<div class="footer-section">
 				<h3>Quick Links</h3>
 				<ul class="footer-links">
-					<li><a href="#home">Home</a></li>
-					<li><a href="#recipe">Recipes</a></li>
-					<li><a href="#popular">Popular</a></li>
-					<li><a href="#about">About</a></li>
+					<li><a href="home">Home</a></li>
+					<li><a href="recipe">Recipes</a></li>
+					<li><a href="popular">Popular</a></li>
+					<li><a href="about">About</a></li>
 				</ul>
 			</div>
 
