--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Discover and share delicious recipes from around the world. Our recipe-sharing platform offers a wide variety of dishes, from classic favorites to modern creations, all in a user-friendly, responsive interface." />
+
 	<title>Recipe Haven</title>
 
 	<link rel="icon" href="/Images/logo.jpg" type="image/png">
