--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Discover and share delicious recipes from around the world. Our recipe-sharing platform offers a wide variety of dishes, from classic favorites to modern creations, all in a user-friendly, responsive interface." />
+	<link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
+	<meta name="google-site-verification" content="CKPHLnSRUyybjyiIUNWCtbdKwb28XGi4q733dmEYSR4" />
 
 	<title>Recipe Haven</title>
 
