Changing the tags list

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 	<link rel="stylesheet" href="/CSS/teasers.css">
 	<link rel="stylesheet" href="/CSS/footer.css">
 	<link rel="stylesheet" href="/CSS/about.css">
+	<link rel="stylesheet" href="/CSS/tags.css">
 </head>
 
 <body>
@@ -76,13 +77,7 @@
 					<div class="content-icons">
 						<div class="icon filter">
 							<p>Popular</p><i class="fa-solid fa-chevron-down fa-lg"></i>
-							<ul class="popular-links">
-								<li>Chicken</li>
-								<li>Chicken</li>
-								<li>Chicken</li>
-								<li>Chicken</li>
-								<li>Chicken</li>
-							</ul>
+							<ul class="popular-links"></ul>
 						</div>
 						<div class="icon search" id="search-icon">
 							<i class="fa-solid fa-magnifying-glass fa-lg"></i>
