--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
 	<link rel="stylesheet" href="/CSS/teasers.css">
 	<link rel="stylesheet" href="/CSS/footer.css">
 	<link rel="stylesheet" href="/CSS/about.css">
-	<link rel="stylesheet" href="/CSS/tags.css">
 </head>
 
 <body>
@@ -65,7 +64,7 @@
 	<section id="home" class="home page">
 		<section class="description">
 			<div class="background">
-				<img src="/Images/description-background.jpg" alt="Loading Images">
+				<img loading="lazy" src="/Images/description-background.jpg" alt="Loading Images">
 			</div>
 			<div class="content">
 				<div class="content-line">
@@ -91,21 +90,21 @@
 			<h2>Featured Recipes</h2>
 			<section class="recipe-cards">
 				<div class="card">
-					<img src="/Images/pasta.jpg" alt="Pasta Recipe">
+					<img loading="lazy" src="/Images/pasta.jpg" alt="Pasta Recipe">
 					<h3>Pasta Delight</h3>
 					<p>Brought together the freshest ingredients and bold flavors to create mouthwatering pasta dishes that
 						are sure to satisfy your cravings with every bite.</p>
 				</div>
 	
 				<div class="card">
-					<img src="/Images/sushi.jpg" alt="Sushi Recipe">
+					<img loading="lazy" src="/Images/sushi.jpg" alt="Sushi Recipe">
 					<h3>Fresh Sushi</h3>
 					<p>Experience the perfect balance of delicate flavors and premium ingredients, crafted to bring you the
 						freshest and most authentic sushi in every bite.</p>
 				</div>
 	
 				<div class="card">
-					<img src="/Images/tacos.jpg" alt="Tacos Recipe">
+					<img loading="lazy" src="/Images/tacos.jpg" alt="Tacos Recipe">
 					<h3>Spicy Tacos</h3>
 					<p>A fiery explosion of bold flavors and vibrant spices, wrapped in a perfectly crisp shell for the
 						ultimate taco experience.</p>
@@ -168,7 +167,7 @@
 			<div class="team-container">
 				<h3>Developer Behind It</h3>
 				<div class="team-member">
-					<img src="/Images/profile.jpg" alt="Founder">
+					<img loading="lazy" src="/Images/profile.jpg" alt="Founder">
 					<h4>Aparneet Dey</h4>
 					<p style="margin-bottom: 10px;">Full-Stack Developer</p>
 					<p>As the full stack developer behind this recipe-sharing platform, I designed and developed the
