--- a/index.html
+++ b/index.html
@@ -61,137 +61,139 @@
 		<div style="height: 75px;"></div>
 	</header>
 
-	<section id="home" class="home page">
-		<section class="description">
-			<div class="background">
-				<img loading="lazy" src="/Images/description-background.jpg" alt="Loading Images">
-			</div>
-			<div class="content">
-				<div class="content-line">
-					<h1 class="main-line">Discover Delicious Recipes</h1>
-					<p class="sub-line">Share your favorite dishes and explore recipes from around the world.</p>
+	<main>
+		<section id="home" class="home page">
+			<section class="description">
+				<div class="background">
+					<img loading="lazy" src="/Images/description-background.jpg" alt="Loading Images">
 				</div>
-				<div class="content-search">
-					<input id="search-bar" type="text" placeholder="Search for recipes...">
-					<div class="content-icons">
-						<div class="icon filter">
-							<p>Popular</p><i class="fa-solid fa-chevron-down fa-lg"></i>
-							<ul class="popular-links"></ul>
-						</div>
-						<div class="icon search" id="search-icon">
-							<i class="fa-solid fa-magnifying-glass fa-lg"></i>
+				<div class="content">
+					<div class="content-line">
+						<h1 class="main-line">Discover Delicious Recipes</h1>
+						<p class="sub-line">Share your favorite dishes and explore recipes from around the world.</p>
+					</div>
+					<div class="content-search">
+						<input id="search-bar" type="text" placeholder="Search for recipes...">
+						<div class="content-icons">
+							<div class="icon filter">
+								<p>Popular</p><i class="fa-solid fa-chevron-down fa-lg"></i>
+								<ul class="popular-links"></ul>
+							</div>
+							<div class="icon search" id="search-icon">
+								<i class="fa-solid fa-magnifying-glass fa-lg"></i>
+							</div>
 						</div>
 					</div>
 				</div>
+			</section>
+
+			<div class="recipe-cards-section">
+				<h2>Featured Recipes</h2>
+				<section class="recipe-cards">
+					<div class="card">
+						<img loading="lazy" src="/Images/pasta.jpg" alt="Pasta Recipe">
+						<h3>Pasta Delight</h3>
+						<p>Brought together the freshest ingredients and bold flavors to create mouthwatering pasta dishes that
+							are sure to satisfy your cravings with every bite.</p>
+					</div>
+		
+					<div class="card">
+						<img loading="lazy" src="/Images/sushi.jpg" alt="Sushi Recipe">
+						<h3>Fresh Sushi</h3>
+						<p>Experience the perfect balance of delicate flavors and premium ingredients, crafted to bring you the
+							freshest and most authentic sushi in every bite.</p>
+					</div>
+		
+					<div class="card">
+						<img loading="lazy" src="/Images/tacos.jpg" alt="Tacos Recipe">
+						<h3>Spicy Tacos</h3>
+						<p>A fiery explosion of bold flavors and vibrant spices, wrapped in a perfectly crisp shell for the
+							ultimate taco experience.</p>
+					</div>
+				</section>
 			</div>
+			
+
+			<section class="recipe-teasers">
+				<h2>Popular Recipes</h2>
+
+				<div class="recipe-preview">
+					<h3>Classic Spaghetti Carbonara</h3>
+					<p>A traditional Roman dish made with creamy eggs, sharp Pecorino Romano cheese, crispy pancetta, and a
+						hint of black pepper. Perfect for a quick yet indulgent meal. <span class="read-more">Read
+							more...</span></p>
+				</div>
+
+				<div class="recipe-preview">
+					<h3>Vegetarian Stir-Fry</h3>
+					<p>A colorful mix of fresh vegetables like bell peppers, broccoli, and snap peas tossed in a savory
+						soy-garlic sauce. Healthy, flavorful, and ready in minutes. <span class="read-more">Read
+							more...</span></p>
+				</div>
+
+				<div class="recipe-preview">
+					<h3>Homemade Chocolate Brownies</h3>
+					<p>Rich, fudgy brownies with a slightly crispy top and gooey center, packed with intense chocolate
+						flavor. A sweet treat for any chocolate lover. <span class="read-more">Read more...</span></p>
+				</div>
+
+			</section>
 		</section>
 
-		<div class="recipe-cards-section">
-			<h2>Featured Recipes</h2>
-			<section class="recipe-cards">
-				<div class="card">
-					<img loading="lazy" src="/Images/pasta.jpg" alt="Pasta Recipe">
-					<h3>Pasta Delight</h3>
-					<p>Brought together the freshest ingredients and bold flavors to create mouthwatering pasta dishes that
-						are sure to satisfy your cravings with every bite.</p>
+		<section id="recipe" class="recipe page">
+			<section class="recipe-cards-section">
+				<h2>Featured Recipes</h2>
+
+				<div class="recipe-cards"></div>
+			</section>
+
+		</section>
+
+		<section id="popular" class="popular page">
+			<div class="recipe-teasers"></div>
+		</section>
+
+		<section id="about" class="about page">
+			<section class="about-section">
+				<div class="about-container">
+					<h2>About Us</h2>
+					<p>Welcome to <span>Recipe Haven</span>, your number one source for discovering and sharing the most
+						delicious recipes from around the world. Whether you're a home cook or a professional chef, our
+						platform makes it easy to find new dishes and share your culinary creations.</p>
+					<p>We are passionate about food and committed to creating a community where food lovers can come
+						together to share and celebrate their love for cooking. Our carefully curated recipes cover a range
+						of cuisines, dietary needs, and skill levels, ensuring there's something for everyone.</p>
 				</div>
-	
-				<div class="card">
-					<img loading="lazy" src="/Images/sushi.jpg" alt="Sushi Recipe">
-					<h3>Fresh Sushi</h3>
-					<p>Experience the perfect balance of delicate flavors and premium ingredients, crafted to bring you the
-						freshest and most authentic sushi in every bite.</p>
+
+				<div class="team-container">
+					<h3>Developer Behind It</h3>
+					<div class="team-member">
+						<img loading="lazy" src="/Images/profile.jpg" alt="Founder">
+						<h4>Aparneet Dey</h4>
+						<p style="margin-bottom: 10px;">Full-Stack Developer</p>
+						<p>As the full stack developer behind this recipe-sharing platform, I designed and developed the
+							website from the ground up. With a focus on both user experience and functionality, I crafted a
+							seamless interface that allows users to discover and share recipes from around the world.</p>
+					</div>
 				</div>
-	
-				<div class="card">
-					<img loading="lazy" src="/Images/tacos.jpg" alt="Tacos Recipe">
-					<h3>Spicy Tacos</h3>
-					<p>A fiery explosion of bold flavors and vibrant spices, wrapped in a perfectly crisp shell for the
-						ultimate taco experience.</p>
+
+				<div class="contact-section">
+					<h3>Contact Us</h3>
+					<p>We'd love to hear from you! Whether you have a question about recipes, want to collaborate, or just
+						want to say hi, feel free to get in touch:</p>
+					<ul>
+						<li>
+							<p>Email: aparnitstudy@gmail.com</p>
+						</li>
+						<li>
+							<p>Address: Chandigarh, India</p>
+						</li>
+					</ul>
 				</div>
 			</section>
-		</div>
-		
-
-		<section class="recipe-teasers">
-			<h2>Popular Recipes</h2>
-
-			<div class="recipe-preview">
-				<h3>Classic Spaghetti Carbonara</h3>
-				<p>A traditional Roman dish made with creamy eggs, sharp Pecorino Romano cheese, crispy pancetta, and a
-					hint of black pepper. Perfect for a quick yet indulgent meal. <span class="read-more">Read
-						more...</span></p>
-			</div>
-
-			<div class="recipe-preview">
-				<h3>Vegetarian Stir-Fry</h3>
-				<p>A colorful mix of fresh vegetables like bell peppers, broccoli, and snap peas tossed in a savory
-					soy-garlic sauce. Healthy, flavorful, and ready in minutes. <span class="read-more">Read
-						more...</span></p>
-			</div>
-
-			<div class="recipe-preview">
-				<h3>Homemade Chocolate Brownies</h3>
-				<p>Rich, fudgy brownies with a slightly crispy top and gooey center, packed with intense chocolate
-					flavor. A sweet treat for any chocolate lover. <span class="read-more">Read more...</span></p>
-			</div>
 
 		</section>
-	</section>
-
-	<section id="recipe" class="recipe page">
-		<section class="recipe-cards-section">
-			<h2>Featured Recipes</h2>
-
-			<div class="recipe-cards"></div>
-		</section>
-
-	</section>
-
-	<section id="popular" class="popular page">
-		<div class="recipe-teasers"></div>
-	</section>
-
-	<section id="about" class="about page">
-		<section class="about-section">
-			<div class="about-container">
-				<h2>About Us</h2>
-				<p>Welcome to <span>Recipe Haven</span>, your number one source for discovering and sharing the most
-					delicious recipes from around the world. Whether you're a home cook or a professional chef, our
-					platform makes it easy to find new dishes and share your culinary creations.</p>
-				<p>We are passionate about food and committed to creating a community where food lovers can come
-					together to share and celebrate their love for cooking. Our carefully curated recipes cover a range
-					of cuisines, dietary needs, and skill levels, ensuring there's something for everyone.</p>
-			</div>
-
-			<div class="team-container">
-				<h3>Developer Behind It</h3>
-				<div class="team-member">
-					<img loading="lazy" src="/Images/profile.jpg" alt="Founder">
-					<h4>Aparneet Dey</h4>
-					<p style="margin-bottom: 10px;">Full-Stack Developer</p>
-					<p>As the full stack developer behind this recipe-sharing platform, I designed and developed the
-						website from the ground up. With a focus on both user experience and functionality, I crafted a
-						seamless interface that allows users to discover and share recipes from around the world.</p>
-				</div>
-			</div>
-
-			<div class="contact-section">
-				<h3>Contact Us</h3>
-				<p>We'd love to hear from you! Whether you have a question about recipes, want to collaborate, or just
-					want to say hi, feel free to get in touch:</p>
-				<ul>
-					<li>
-						<p>Email: aparnitstudy@gmail.com</p>
-					</li>
-					<li>
-						<p>Address: Chandigarh, India</p>
-					</li>
-				</ul>
-			</div>
-		</section>
-
-	</section>
+	</main>
 
 	<footer class="footer">
 		<div class="footer-container">
@@ -229,8 +231,6 @@
 			<p>&copy; 2025 Your Recipe Website. All rights reserved.</p>
 		</div>
 	</footer>
-
-
 
 	<script type="module" src="/JS/index.js"></script>
 </body>
