--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 			</section>
 
 			<div class="recipe-cards-section">
-				<h2>Featured Recipes</h2>
-				<section class="recipe-cards">
+				<h2 class="autoShow">Featured Recipes</h2>
+				<section class="recipe-cards autoShow">
 					<div class="card">
 						<img loading="lazy" src="/Images/pasta.jpg" alt="Pasta Recipe">
 						<h3>Pasta Delight</h3>
@@ -115,23 +115,23 @@
 			
 
 			<section class="recipe-teasers">
-				<h2>Popular Recipes</h2>
+				<h2 class="autoShow">Popular Recipes</h2>
 
-				<div class="recipe-preview">
+				<div class="recipe-preview autoShow">
 					<h3>Classic Spaghetti Carbonara</h3>
 					<p>A traditional Roman dish made with creamy eggs, sharp Pecorino Romano cheese, crispy pancetta, and a
 						hint of black pepper. Perfect for a quick yet indulgent meal. <span class="read-more">Read
 							more...</span></p>
 				</div>
 
-				<div class="recipe-preview">
+				<div class="recipe-preview autoShow">
 					<h3>Vegetarian Stir-Fry</h3>
 					<p>A colorful mix of fresh vegetables like bell peppers, broccoli, and snap peas tossed in a savory
 						soy-garlic sauce. Healthy, flavorful, and ready in minutes. <span class="read-more">Read
 							more...</span></p>
 				</div>
 
-				<div class="recipe-preview">
+				<div class="recipe-preview autoShow">
 					<h3>Homemade Chocolate Brownies</h3>
 					<p>Rich, fudgy brownies with a slightly crispy top and gooey center, packed with intense chocolate
 						flavor. A sweet treat for any chocolate lover. <span class="read-more">Read more...</span></p>
