Authentication page set up and server connection.

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 		rel="stylesheet">
 
 	<!-- CSS -->
-	<link rel="stylesheet" href="/CSS/index.css">
-	<link rel="stylesheet" href="/CSS/header.css">
-	<link rel="stylesheet" href="/CSS/description.css">
-	<link rel="stylesheet" href="/CSS/Recipes.css">
-	<link rel="stylesheet" href="/CSS/teasers.css">
-	<link rel="stylesheet" href="/CSS/footer.css">
-	<link rel="stylesheet" href="/CSS/about.css">
+	<link rel="stylesheet" href="/CSS/index-css/index.css">
+	<link rel="stylesheet" href="/CSS/index-css/header.css">
+	<link rel="stylesheet" href="/CSS/index-css/description.css">
+	<link rel="stylesheet" href="/CSS/index-css/Recipes.css">
+	<link rel="stylesheet" href="/CSS/index-css/teasers.css">
+	<link rel="stylesheet" href="/CSS/index-css/footer.css">
+	<link rel="stylesheet" href="/CSS/index-css/about.css">
 </head>
 
 <body>
@@ -47,9 +47,7 @@
 			</div>
 			<div class="right-header">
 				<div class="header-btn">
-					<button class="login-btn">
-						Login
-					</button>
+					<button class="login-btn" onclick="window.location.href='/authentication'">Login</button>
 				</div>
 				<div class="hamburger">
 					<span class="bar"></span>
@@ -232,7 +230,7 @@
 		</div>
 	</footer>
 
-	<script type="module" src="/JS/index.js"></script>
+	<script type="module" src="/JS/index-js/index.js"></script>
 </body>
 
 </html>
